# mcp-verify

./: .gitignore  BENCHMARK.md  LICENSE  README.md  check.sh  pyproject.toml
eval/: __init__.py  ablation.py  adapter.py  adversarial.py  analysis.py  cases.py  cases_adversarial.py  cases_education.py  cases_legal.py  cases_medical.py  cases_redteam.py  fixtures.py  judge.py  run.py  scorer.py  taxonomy.py
mcp_verify/: __init__.py  client.py  core.py  parsing.py  prompt.py  server.py
tests/: conftest.py  fakes.py  test_core.py  test_eval.py  test_server.py
